--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   /* Removes stupid default white space */
 
-  background-color: #3e3e3e;
+  background-color: #563d7c;
   /* u kno wat this do ;) */
 
   text-align: center;
